--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,3 +1,12 @@
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+p, h1, h2, h3, h4, h5 {
+    cursor: default;
+}
+
 body {
     background-color: #f1f1f1;
     font-family: Arial, sans-serif;
@@ -72,4 +81,16 @@ body {
 
 .url-card {
     margin-bottom: 20px;
+}
+
+.card-header {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: flex-end;
+}
+
+.back-half {
+    font-weight: bolder;
+    font-size: 14px;
 }
